Refactoring, cleanup, formatting, bugfixes, minor enhancements